<resources>
    <string name="app_name">DmytroBerezhnyi_VDataTestTask</string>
    <string name="company">Company</string>
    <string name="collaborator">Collaborator</string>
    <string name="add_company">Add company</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="save">Save</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_name">Enter name</string>
    <string name="choose_company">Choose company</string>
    <string name="new_collaborator">New collaborator</string>
    <string name="picture_gallery">Picture gallery</string>
    <string name="company_details">Company details</string>
    <string name="total_collaborators">Total collaborators:</string>
    <string name="currently_working">Currently working:</string>
    <string name="not_woking">Not working anymore:</string>
    <string name="edit_collaborator">Edit collaborator</string>
    <string name="working_in_these_companies">Working in these companies:</string>
    <string name="worked_in_these_companies_before">Worked in these companies before:</string>
    <string name="emty_surname">Surname can\'t be empty :)</string>
    <string name="empty_name">Name can\'t be empty :)</string>
    <string name="pick_picture">Pick picture first :)</string>
    <string name="picture">Picture</string>
    <string name="collaborator_photo">Collaborator_photo</string>
    <string name="add">Add</string>
</resources>